# qhack-isit-2026

./: AGENTS.md  README.md  pyproject.toml  v1.2.pptx
notebooks/: demo2_warm.ipynb
src/: __init__.py  baselines.py  dynamics.py  encoding_study.py  graphs.py  qubo.py  solve_qaoa.py
