[project]
name = "qhack-isit-2026"
version = "0.1.0"
description = "ISIT 2026 Quantum Hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "qiskit>=2.4.2",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "qiskit-optimization>=0.7.0",
    "rustworkx>=0.18.0",
    "scipy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
